Update squeezeslace version incl. hard float version for rasp pi Moved getcontrols for cover art etc to just set properties instead Play/pause logic improved (thanks ReducedToZero)

--- a/staging/script.xsqueeze/resources/bin/squeezeslave-1.2-376-osx/squeezeslave.plist
+++ b/staging/script.xsqueeze/resources/bin/squeezeslave-1.2-376-osx/squeezeslave.plist
@@ -13,8 +13,8 @@
 	<key>ProgramArguments</key>
 	<array>
 		<string>/opt/local/bin/squeezeslave</string>
-		<string>-nSennheiser USB Headset</string>
-		<string>-r15</string>
+		<string>-nBuilt-in Output</string>
+		<string>-r30</string>
 		<string>-Y/var/tmp/squeezeslave.log</string>
 		<string>-F</string>
 	</array>
