--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 *.pyo
 /staging/plugin.image.xzen/*.psproj
+
+/staging/skin.confluence.bossanova808.gotham/720p/*.bak
+/staging/skin.confluence.bossanova808.gotham/720p/*.bak
