--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 *.pyo
-/staging/plugin.image.xzen/*.psproj
-
-/staging/skin.confluence.bossanova808.gotham/720p/*.bak
-/staging/skin.confluence.bossanova808.gotham/720p/*.bak
 *.pyc
+/**/.idea
